<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleEnabled="false">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="show/hide" />

            <Button
                android:id="@+id/btn_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logo/Icon" />

            <Button
                android:id="@+id/btn_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title" />

            <Button
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home" />

            <Button
                android:id="@+id/btn_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home Up" />

            <Button
                android:id="@+id/btn_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Overlay" />

            <Button
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu" />

            <Button
                android:id="@+id/btn_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom" />

            <Button
                android:id="@+id/btn_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Options" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>